# shell-vm

./: CMakeLists.txt  LICENSE  README.md  build_android.py  embedded_runner.cpp
docs/: ARCHITECTURE.md
include/: compiler.h  runtime.h  shell_vm.h  vm_core.h
src/: compiler.cpp  runtime.cpp  vm_core.cpp
tools/: embed_bytecode.cpp
